Versión final con todos los test pasando